--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,7 +35,7 @@ header .contenedor {
 header .logotipo {
   font-family: "Bebas Neue", cursive;
   font-weight: normal;
-  color: var(--rojo);
+  color: purple;
   font-size: 40px;
   margin-left: 20px;
 }
@@ -84,7 +84,7 @@ header nav a.activo {
   margin-bottom: 1.25em;
 }
 
-.pelicula-principal .boton {
+.pelicula-principal .button {
   background: rgba(0, 0, 0, 0.5);
   border: none;
   border-radius: 0.31em;
@@ -108,7 +108,6 @@ header nav a.activo {
 
 /* ---- ----- ----- Media Queries ----- ----- ----- */
 @media screen and (max-width: 800px) {
-
   header .logotipo {
     margin-bottom: 10px;
     font-size: 30px;
@@ -127,17 +126,110 @@ header nav a.activo {
     max-width: 100%;
   }
 
-  .whatsapp{
+  .peliculas-recomendadas.contenedor-carousel {
+    overflow: visible;
+  }
+  .peliculas-recomendadas.contenedor-carousel.carousel {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+  .peliculas-recomendadas.indicadores,
+  .peliculas-recomendadas.peliculas-recomendadas.flecha-izquierda
+    .peliculas-recomendadas.flecha-derecha {
     display: none;
   }
 
+  .whatsapp {
+    display: none;
+  }
 }
 
+.contenedor-titulo-controles {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+.contenedor-titulo-controles h3 {
+  background: #fff;
+  font-size: 30px;
+}
+.contenedor-titulo-controles.indicadores button {
+  background: #fff;
+  height: 3px;
+  width: 10px;
+  cursor: pointer;
+  border: none;
+  margin-right: 2px;
+}
+.contenedor-titulo-controles.indicadores button:hover,
+.contenedor-titulo-controles.indicadores button.activo {
+  background: red;
+}
+.peliculas-recomendadas {
+  margin-bottom: 70px;
+}
+.peliculas-recomendadas.contenedorprincipal {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.peliculas-recomendadas.contenedorprincipal.flecha-izquierda,
+.peliculas-recomendadas.contenedorprincipal.flecha-derecha {
+  position: absolute;
+  border: none;
+  background: rgba(0, 0, 0, 0.3);
+  font-size: 40px;
+  height: 50%;
+  top: calc(50% - 25%);
+  line-height: 40px;
+  width: 50px;
+  color: #fff;
+  cursor: pointer;
+  z-index: 500;
+  transition: 0.2s ease all;
+}
+
+.peliculas-recomendadas.contenedor-carousel {
+  width: 100%;
+  padding: 20px 0;
+  overflow: hidden;
+  scroll-behavior: smooth;
+}
+.peliculas-recomendadas.contenedor-carousel.carousel {
+  display: flex;
+  flex-wrap: nowrap;
+}
+.peliculas-recomendadas.contenedor-carousel.carousel.pelicula {
+  width: 20%;
+  transition: 0.3s ease all;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+}
+.peliculas-recomendadas.contenedor-carousel.pelicula {
+  transform: scale(1.2);
+  transform-origin: center;
+}
+
+.peliculas-recomendadas.contenedor-carousel.carousel.pelicula img {
+  width: 100%;
+  vertical-align: top;
+}
+
+.peliculas-recomendadas.contenedorprincipal.flecha-izquierda:hover,
+.peliculas-recomendadas.contenedorprincipal.flecha-derecha:hover {
+  background: rgba(0, 0, 0, 0.9);
+}
+.peliculas-recomendadas.contenedorprincipal.flecha-izquierda {
+  left: 0;
+}
+.peliculas-recomendadas.contenedorprincipal.flecha-derecha {
+  right: 0;
+}
 
 /* ---- ----- ----- Pagina de CONTACTO ----- ----- ----- */
 
-#contactoMain{
-  
+#contactoMain {
   margin-top: 18rem;
 }
 
@@ -153,14 +245,14 @@ header nav a.activo {
   width: 80%;
 }
 
-#msjContacto{
+#msjContacto {
   background-color: rgba(14, 13, 13, 0.2);
 }
-#formContacto{
+#formContacto {
   background-color: rgba(14, 13, 13, 0.2);
 }
 
-#contacto{
+#contacto {
   background-image: url(../img/pagcontacto.png);
   background-size: cover;
 }
