--- a/css/estilos.css
+++ b/css/estilos.css
@@ -106,6 +106,11 @@ header nav a.activo {
   margin-right: 1.25em;
 }
 
+.pelicula-principal .boton a {
+  text-decoration: none;
+  color: black;
+}
+
 .contenedor-titulo-controles {
   display: flex;
   justify-content: space-between;
