--- a/css/estilosLogin.css
+++ b/css/estilosLogin.css
@@ -7,10 +7,49 @@ body{
     height: 100vh;
 }
 
-a{
-    text-decoration: none;
-    color: purple;
 
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.contenedor {
+    width: 90%;
+    margin: auto;
+}
+
+header {
+    padding: 30px 0;
+    position: fixed;
+    top: 0;
+}
+
+header .contenedor {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+}
+
+nav .logotipo {
+    font-family: "Bebas Neue", cursive;
+    font-weight: normal;
+    color: #e50914;
+    font-size: 40px;
+    margin-left: 20px;
+}
+
+header nav a {
+    color: #e50914;
+    text-decoration: none;
+    margin-right: 20px;
+}
+
+header nav a:hover,
+header nav a.activo {
+    color:  #e50914;
 }
 
 .nuevaPassword{
@@ -21,33 +60,6 @@ a{
     margin-top: 8rem;
 }
 
-/* #iniciarSesion {
-    position: fixed;
-    top: 15px;
-    right: 30px;
-    z-index: 2;
-} */
-
-header {
-    padding: 30px 0;
-    position: fixed;
-    top: 0;
-}
-
-header .logotipo {
-    font-family: "Bebas Neue", cursive;
-    font-weight: normal;
-    color: purple;
-    font-size: 40px;
-    margin-left: 20px;
-}
-
-
-
-#titIniciar{
-    font-size: 50px;
-    margin-bottom: 6rem;
-}
 
 #formulario{
     margin-top: 10rem;
@@ -61,6 +73,4 @@ header .logotipo {
     padding: 10px;
     background-color: rgba(7, 7, 7, 0.5);
 }
-
-
 
