--- a/css/pelicula.css
+++ b/css/pelicula.css
@@ -1,4 +1,4 @@
-root {
+:root {
   --rojo: #e50914;
   --fondo: #141414;
 }
@@ -11,6 +11,9 @@ root {
 
 body {
   background: black;
+  background-image: url(../img/pagcontacto.png);
+  background-size: cover;
+  background-repeat: no-repeat;
   font-family: "Open Sans", sans-serif;
 }
 
@@ -38,14 +41,14 @@ header .contenedor {
 }
 
 header nav a {
-  color: #aaa;
+  /* color: #aaa; */
   text-decoration: none;
   margin-right: 20px;
 }
 
 header nav a:hover,
-header nav a.activo {
-  color: #fff;
+header nav a.activo, header nav a:visited {
+  color: var(--rojo)
 }
 
 header .logotipo {
@@ -61,16 +64,19 @@ header .logotipo {
   font-size: 16px;
   min-height: 40.62em;
   color: #fff;
-  background: linear-gradient(rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%),
-    url(../img/tony.jpg);
   background-position: center center;
   background-size: cover;
+  margin-top: 4em;
   margin-bottom: 3.12em;
   display: flex;
   align-items: end;
 }
 
 .pelicula-principal .contenedor {
+  display: flex;
+  justify-content: space-around;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 1em;
   margin: 0 auto;
   margin-bottom: 6.25em;
 }
@@ -87,6 +93,11 @@ header .logotipo {
   line-height: 1.75em;
   max-width: 50%;
   margin-bottom: 1.25em;
+}
+
+.pelicula-principal .imagen {
+  max-width: 300px;
+  max-height: 500px;
 }
 
 .pelicula-principal .boton {
